# crick-genome-tools

./: .coveragerc  .editorconfig  .gitignore  .prettierrc  Dockerfile  README.md  pyproject.toml  pytest.ini  tox.ini  update_version.py
.github/: ci.yml  tag_on_push.yml
.github/workflows/: ci.yml  push_containers.yml  tag_on_push.yml
containers/genomics_report/: env.yml
containers/iterative_alignment/: Dockerfile  env.yml
containers/viral_genomics_report/: Dockerfile
crick_genome_tools/: __init__.py
crick_genome_tools/blast/: utils.py
crick_genome_tools/io/: command_chain.py  fasta.py  fastq_file.py  gzip_file.py  log_subprocess.py  samtools.py  snapgene.py  subprocess_stream.py  vcf.py
crick_genome_tools/reporting/: interactive_vcf_report.py  plotly_graph_common.py  report_data_parser.py
crick_genome_tools/reporting/custom/: mosdepth_parser.py  samtools_parser.py
crick_genome_tools/reporting/multiqc/: multiqc_parser.py
crick_genome_tools/reporting/reports/: crick_report.py  run_report.py  vector_core_aav_report.py  viral_genomics_report.py
crick_genome_tools/reporting/toulligqc/: common.py  common_statistics.py  extractor_common.py  fastq_bam_common.py  fastq_extractor.py
crick_genome_tools/reporting/tqc/: common_statistics.py  configuration.py  extractor_common.py  fastq_bam_common.py  fastq_extractor.py  plotly_charts.py
crick_genome_tools/samtools/: utils.py
crick_genome_tools/seq/: barcode_demux.py  mask_itr.py  utils.py
crick_genome_tools/workflows/: iterative_alignment.py
tests/: conftest.py  test_benchmark_demux_reads.py  test_benchmark_generate_reads.py  test_blast_utils.py  test_io_command_chain.py  test_io_fasta.py  test_io_fastq.py  test_io_log_subprocess.py  test_io_samtools.py  test_io_snapgene.py  test_io_subprocess_stream.py  test_io_vcf.py  test_reporting_custom.py  test_reporting_multiqc.py  test_reporting_report_data_parser.py  test_reporting_toilligqc.py  test_samtools_utils.py  test_seq_barcode_demux.py  test_seq_mask_itr.py  test_seq_utils.py  test_toilligqc.py  test_workflows_iterative_alignment.py
tests/data/blast/invalid/: duplicate_hits.txt  hit_not_found.txt
tests/data/io/fastq/: test.fastq
tests/data/mpileup/: h1n1.txt
tests/data/reporting/: aav.pkl
tests/data/seq/: L002_R1.fastq  L002_R2.fastq  sub_read_L002_R1.fastq  undetermined_L002_R1.fastq
(+72 files in other folders)
